--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -45,6 +45,7 @@
           <input id="joinUsFullname" type="text" placeholder="Fullname" />
           <input id="joinUsEmail" type="email" placeholder="E-mail" />
           <p id="modalErrorMessage">Fill in the fields corectly!</p>
+          <p id="modalSuccessMessage">Successfully!</p>
           <button id="join">Join</button>
         </div>
       </div>
@@ -100,7 +101,7 @@
     </header>
     
     <main class="w-100">
-      <section class="sections section-1 w-100">
+      <section class="sections section-1 w-100 catalog_main_section">
         <!-- Catagorie side of slider -->
         <div class="text-side">
           <h1>All Books</h1>
@@ -389,7 +390,6 @@
       </div>
     </footer>
     <!-- Slider js Cdn -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script> -->
     <script src="../js/jquery-3-7-1-min.js"></script>
     <script src="../js/slick.min.js"></script>
     <!-- Catalog js -->
