--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -33,6 +33,7 @@
           <input id="joinUsFullname" type="text" placeholder="Fullname" />
           <input id="joinUsEmail" type="email" placeholder="E-mail" />
           <p id="modalErrorMessage">Fill in the fields corectly!</p>
+          <p id="modalSuccessMessage">Successfully!</p>
           <button id="join">Join</button>
         </div>
       </div>
