--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/footer.css" />
     <!-- Nav css -->
     <link rel="stylesheet" href="../css/joinUs.css" />
+    <!-- Search css -->
     <link rel="stylesheet" href="../css/search.css" />
     <link rel="icon" href="../assets/photos/logo_red.svg" type="image/x-icon" />
     <title>Search</title>
@@ -33,6 +34,7 @@
           <input id="joinUsFullname" type="text" placeholder="Fullname" />
           <input id="joinUsEmail" type="email" placeholder="E-mail" />
           <p id="modalErrorMessage">Fill in the fields corectly!</p>
+          <p id="modalSuccessMessage">Successfully!</p>
           <button id="join">Join</button>
         </div>
       </div>
@@ -259,8 +261,9 @@
         All rights reserved © 2003-2021 LIBRARY TERMS OF USE | Privacy Policy
       </div>
     </footer>
-    <script src="../js/hamburger.js"></script>
+    
     <script src="../js/joinUs.js"></script>
+    <script type="module" src="../js/joinUsModule.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="./search.js"></script>
   </body>
