completed about store firebase

--- a/index.html
+++ b/index.html
@@ -108,15 +108,7 @@
       <section class="catalog_section">
         <h2 class="catalog_title">Catalog</h2>
         <div class="catalog_items">
-          <button>Books</button>
-          <button>Electronic books</button>
-          <button>Audiobooks</button>
-          <button>Toys & Creativity</button>
-          <button>Books accessories</button>
-          <button>Notepads</button>
-          <button>Board games</button>
-          <button>Present</button>
-          <button>Stock</button>
+          <!-- <button>Books</button> -->
         </div>
       </section>
 
@@ -238,5 +230,6 @@
     <script src="./src/js/main.js"></script>
     <!-- Join us module js -->
     <script type="module" src="./src/js/joinUsModule.js"></script>
+    <script type="module" src="./src/js/catalogFirebase.js"></script>
   </body>
 </html>
