--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -90,11 +90,10 @@
         </button>
       </div>
     </header>
+
     <main class="w-100">
-      <!-- Section 1 -->
-      <section class=" section-1">
-        <!-- Texts div -->
-        <div class="text-content">
+      <section class="section-1">
+        <!-- <div class="text-content">
           <h1>About Store</h1>
           <p>
             We work without holidays and weekends! Residents of Kiev can receive
@@ -106,12 +105,12 @@
             in the order basket, after selecting the delivery city.
           </p>
         </div>
-        <!-- Image div -->
         <div class="img-content">
           <img class="img-fluid" src="../assets/photos/books.svg" alt="" />
-        </div>
+        </div> -->
       </section>
     </main>
+
     <footer class="footer">
       <section class="footer_icons_section">
         <p>Follow us on social media</p>
@@ -180,5 +179,6 @@
     </footer>
     <script src="../js/joinUs.js"></script>
     <script type="module" src="../js/joinUsModule.js"></script>
+    <script type="module" src="../js/aboutStoreFirebase.js"></script>
   </body>
 </html>
