--- a/src/pages/book.html
+++ b/src/pages/book.html
@@ -102,7 +102,7 @@
         </button>
         <div class="box d-flex justify-content-between">
           <div class="bookProduct">
-            <div class="bookInfo">
+            <div class="bookInfo"> <!--firebase info-->
               <p class="bookYear">2017</p>
               <h2 class="bookName">Order in Chaos</h2>
               <p class="bookDateOfAdded">2 days ago added</p>
@@ -156,36 +156,13 @@
 
                   <div class="errorBox"></div>
                   <div class="userComment">
-                    <ul class="userCommentUl">
-                      <!-- <li class="userCommentLi">
-                        <p>
-                          <span class="anonim">anonim </span>
-                          <span> 18:32 today</span>
-                        </p>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Odio, quibusdam ratione quidem asperiores
-                          accusantium odit.
-                        </p>
-                      </li>
-                      <li class="userCommentLi">
-                        <p>
-                          <span class="anonim">anonim </span>
-                          <span> 2 days ago</span>
-                        </p>
-                        <p>
-                          Lorem ipsum dolor sit amet consectetur, adipisicing
-                          elit. Odio, quibusdam ratione quidem asperiores
-                          accusantium odit.
-                        </p>
-                      </li> -->
-                    </ul>
+                    <ul class="userCommentUl"></ul>
                   </div>
                 </div>
               </form>
             </div>
           </div>
-          <div class="bookImg">
+          <div class="bookImg"> 
             <img
               class="book"
               src="../assets/photos/order_in_chaos.svg"
@@ -264,7 +241,7 @@
       </div>
     </footer>
     <script src="../js/joinUs.js"></script>
-    <script src="../js/joinUsModule.js"></script>
+    <script type="module" src="../js/joinUsModule.js"></script>
     <script src="../js/book.js"></script>
   </body>
 </html>
