--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -102,22 +102,10 @@
     
     <main class="w-100">
       <section class="sections section-1 w-100 catalog_main_section">
-        <!-- Catagorie side of slider -->
         <div class="text-side">
           <h1>All Books</h1>
-          <div class="slider-catagories">
-            <button>All</button> <button>Fantastic</button>
-            <button>Self-development</button> 
-            <button>Baby</button>
-            <button>Classic</button>
-            <button>TEST 1</button>
-            <button>TEST 2</button>
-            <button>TEST 3</button>
-            <button>TEST 4</button>
-            <button>TEST 5</button>
-          </div>
+          <div class="slider-catagories"></div>
         </div>
-        <!-- Slider -->
         <div class="slider-1">
           <div class="slider_main_card">
             <div class="slider-card">
@@ -134,32 +122,28 @@
               <p>Konstantin Koptelov</p>
               <button>Read more</button>
             </div>
-          </div>
-          <div class="slider_main_card">
+          </div> <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
               <p>Konstantin Koptelov</p>
               <button>Read more</button>
             </div>
-          </div>
-          <div class="slider_main_card">
+          </div> <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
               <p>Konstantin Koptelov</p>
               <button>Read more</button>
             </div>
-          </div>
-          <div class="slider_main_card">
+          </div> <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
               <p>Konstantin Koptelov</p>
               <button>Read more</button>
             </div>
-          </div>
-          <div class="slider_main_card">
+          </div> <div class="slider_main_card">
             <div class="slider-card">
               <img class="books-img" src="../assets/photos/book_1.svg" alt="" />
               <p>Order in Chaos</p>
@@ -178,11 +162,9 @@
         </div>
       </section>
       <section class="sections section-2 w-100">
-        <!-- Catagorie side of slider -->
         <div>
           <h1 class="w-100 text-center best-seller">Bestseller</h1>
         </div>
-        <!-- Slider -->
         <div class="slider-2">
           <div class="slider_main_card">
             <div class="slider-card">
@@ -243,7 +225,6 @@
         </div>
       </section>
       <section class="sections section-3 w-100">
-        <!-- Catagorie side of slider -->
         <div>
           <h1 class="w-100 text-center new-releases">New releases</h1>
         </div>
@@ -398,5 +379,7 @@
     <script src="../js/joinUs.js"></script>
     <!-- Join us module js -->
     <script type="module" src="../js/joinUsModule.js"></script>
+    <script type="module" src="../js/catalogPageFirebase.js"></script>
+    <script type="module" src="../js/catalogBookFirebase.js"></script>
   </body>
 </html>
