--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -100,7 +100,7 @@
               </li>
               <li>
                 <img src="../assets/photos/book-white-logo.svg" alt="book" />
-                <a href="#">Logout</a>
+                <a id="logOutBtn" href="#">Logout</a>
               </li>
             </ul>
           </div>
