fixed admin design

--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -29,7 +29,7 @@
    
       <header>
         <div class="alert alert-danger" role="alert">
-         Error: wrong username or password
+         Error: Wrong username or password
         </div>
         <div id="header_admin_logo">
           <img src="../assets/photos/logo-white.svg" alt="logo" width="282px" />
@@ -54,6 +54,7 @@
       </section>
     </div>
 
+<!-- Main admin panel -->
     <section id="Second-panel" class="d-none">
       <section class="left">
         <aside>
@@ -69,12 +70,6 @@
               style="width: 25px"
               id="closeBtn"
             />
-            <!-- <img src="./img/book-white-logo.svg" alt="logo">
-                    <div class="logo-content">
-                        <h2>LIBRARY</h2>
-                        <span class="logo-line"></span>
-                        <span class="logo-title">Admin Panel</span>
-                    </div> -->
           </div>
           <div class="list">
             <ul>
@@ -225,11 +220,6 @@
                 <div class="d-flex">
                   <input id="bookImageUrlInput" type="text" />
                   <input
-                    style="
-                      overflow: hidden;
-                      width: 116px;
-                      background: transparent;
-                    "
                     type="file"
                     name=""
                     id="imgUrlInput"
@@ -408,6 +398,7 @@
         </section>
       </section>
     </section>
+    
     <script src="../js/admin_DOM.js"></script>
     <script src="../js/hamburger.js"></script>
     <script src="../js/adminDropDown.js"></script>
