finished search page js and fixed some slider problem in catalog page

--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -95,7 +95,7 @@
               </li>
               <li>
                 <img src="../assets/photos/book-white-logo.svg" alt="book" />
-                <a id="logOutBtn" href="#">Logout</a>
+                <a id="logOutBtn1" href="#">Logout</a>
               </li>
             </ul>
           </div>
@@ -141,7 +141,7 @@
               </li>
               <li>
                 <img src="../assets/photos/book-white-logo.svg" alt="book" />
-                <a id="logOutBtn" href="#">Logout</a>
+                <a id="logOutBtn2" href="#">Logout</a>
               </li>
             </ul>
           </div>
