Finished detail page and book comment api

--- a/src/pages/book.html
+++ b/src/pages/book.html
@@ -96,13 +96,13 @@
     </header>
 
     <div class="bookAbout">
-      <div class="container">
+      <!-- <div class="container">
         <button id="backBtn" class="btnBack">
           <i class="fa-solid fa-angle-left"></i> back
         </button>
         <div class="box d-flex justify-content-between">
           <div class="bookProduct">
-            <div class="bookInfo"> <!--firebase info-->
+            <div class="bookInfo"> firebase info
               <p class="bookYear">2017</p>
               <h2 class="bookName">Order in Chaos</h2>
               <p class="bookDateOfAdded">2 days ago added</p>
@@ -171,7 +171,7 @@
             <span class="new">new</span>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <footer class="footer">
@@ -242,6 +242,6 @@
     </footer>
     <script src="../js/joinUs.js"></script>
     <script type="module" src="../js/joinUsModule.js"></script>
-    <script src="../js/book.js"></script>
+    <script type="module" src="../js/book.js"></script>
   </body>
 </html>
