Fixed slider problem in catalog page

--- a/src/pages/catalog.html
+++ b/src/pages/catalog.html
@@ -187,7 +187,7 @@
         <div class="text-side">
           <h1>All Books</h1>
           <div class="slider-catagories">
-            <button>All</button>
+            <button >All</button>
           </div>
         </div>
         <!-- Slider main container -->
@@ -376,14 +376,14 @@
     <!-- Slider js  -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <!-- Catalog js -->
-    <script src="../js/catalog.js"></script>
+    <!-- <script src="../js/catalog.js"></script> -->
     <!-- Join us -->
     <script src="../js/joinUs.js"></script>
     <!-- Join us module js -->
     <script type="module" src="../js/joinUsModule.js"></script>
     
     <script type="module" src="../js/catalogBookFirebase.js"></script>
-    <script src="../js/book.js"></script>
+    <!-- <script src="../js/book.js"></script> -->
    
     <!-- <script type="module" src="../js/catalogPageFirebase.js"></script> -->
   </body>
