Fixed date function and remove choose file input

--- a/src/pages/admin.html
+++ b/src/pages/admin.html
@@ -219,11 +219,11 @@
                 <p>Book Image Url</p>
                 <div class="d-flex">
                   <input id="bookImageUrlInput" type="text" />
-                  <input
+                  <!-- <input
                     type="file"
                     name=""
                     id="imgUrlInput"
-                  />
+                  /> -->
                 </div>
               </div>
               <div>
